tests/gabc-dump/should-fail/bad-vowel-file/bad-vowel-file.gabc
name: bad-vowel-file;
%%
(c4) g(g) (::)
